# ani-dock

./: Cargo.toml  README.md  report.html
crates/ani-dock-core/src/: lib.rs
crates/ani-dock-db/: Cargo.toml
crates/ani-dock-db/src/: lib.rs
crates/ani-dock-server/: Cargo.toml
crates/ani-dock-server/src/: main.rs
crates/ani-dock-server/src/router/: mod.rs
src/: anime_episode.rs  config.rs  constant.rs  cookie.rs  error.rs  lib.rs  request.rs
src/anime/: episode.rs  episode_detail.rs  mod.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: download_3499.rs  main.rs
tests/fixture/: animeVideo-sn-3499.html  animeVideo-sn-49780.html  animeVideo-sn-49903.html
