[package]
name = "ani-gamer-pro"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs"] }
toml = "1.1.2"
directories = "6.0.0"
domparser = "0.0.7"
wreq = { version = "5.3.0", features = ["cookies", "cookies-preserve-order", "deflate", "gzip"] }
wreq-util = "2.2.6"
url = "2.5.8"
indexmap = "2.14.0"
regex = "1.13.0"

[dev-dependencies]
anyhow = "1.0.103"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
